--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">QNote 岁月不回头</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">自定义</string>
+    <string name="signature">By QingYu</string>
 </resources>
