1. Add:Long press to delete note 2.Add:Auto refresh data after note changed or new added 3. Ehance:Formated the note info showed in the home page 4.Adjust:New app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">QNote 岁月不回头</string>
+    <string name="app_name">QNote 签名便签</string>
     <string name="action_settings">自定义</string>
     <string name="signature">By QingYu</string>
 </resources>
